[gd_scene load_steps=18 format=3 uid="uid://c832oa72fqph0"]

[ext_resource type="Script" path="res://Room/scripts/RoomMaster.gd" id="1_4dbpo"]
[ext_resource type="PackedScene" uid="uid://clf7tjq6t1txy" path="res://Character/character.tscn" id="1_dc88r"]
[ext_resource type="Script" path="res://Character/Character_data.gd" id="2_srceq"]
[ext_resource type="Script" path="res://Room/scripts/Camera.gd" id="3_18bnm"]
[ext_resource type="Script" path="res://Room/scripts/player_control.gd" id="4_qh48l"]
[ext_resource type="PackedScene" uid="uid://cio6q28oui142" path="res://assets/targetPosition.tscn" id="5_bu0hj"]
[ext_resource type="PackedScene" uid="uid://d010hhw7nny0c" path="res://Room/scenes/obstacle.tscn" id="6_irjcc"]
[ext_resource type="Script" path="res://Room/scripts/character_info_UI.gd" id="7_mcn2y"]
[ext_resource type="PackedScene" uid="uid://kt3ekesyf227" path="res://Room/scenes/target_indicator.tscn" id="8_fpsxd"]

[sub_resource type="Resource" id="Resource_f6l72"]
script = ExtResource("2_srceq")
team = 0

[sub_resource type="Resource" id="Resource_kyw8x"]
script = ExtResource("2_srceq")
team = 1

[sub_resource type="NavigationMesh" id="NavigationMesh_ykjs7"]
vertices = PackedVector3Array(-2.75, 0.52, -5.5, -0.75, 0.52, -5.5, -0.75, 0.52, -49.5, -3, 0.52, -4.25, -49.5, 0.52, -49.5, -49.5, 0.52, -4.25, 1, 0.52, -5.5, 1, 0.52, -49.5, 2.75, 0.52, -3.25, 4, 0.52, -1.5, 4.25, 0.52, -2, 3.25, 0.52, -3.5, 3.25, 0.52, -5.25, 6, 0.52, -2, 49.5, 0.52, -1, 49.5, 0.52, -49.5, 6.25, 0.52, -1, 4, 0.52, 0, -2.75, 0.52, -3.25, 5, 0.52, 49.5, -49.5, 0.52, 49.5, 5, 0.52, 0.25, 5.75, 0.52, 0.25, 49.5, 0.52, 49.5)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(0, 3, 2), PackedInt32Array(2, 3, 5), PackedInt32Array(2, 5, 4), PackedInt32Array(2, 7, 1), PackedInt32Array(1, 7, 6), PackedInt32Array(11, 10, 8), PackedInt32Array(8, 10, 9), PackedInt32Array(12, 6, 7), PackedInt32Array(10, 11, 13), PackedInt32Array(13, 11, 12), PackedInt32Array(13, 12, 14), PackedInt32Array(14, 12, 15), PackedInt32Array(15, 12, 7), PackedInt32Array(14, 16, 13), PackedInt32Array(9, 17, 8), PackedInt32Array(8, 17, 18), PackedInt32Array(18, 17, 5), PackedInt32Array(5, 17, 19), PackedInt32Array(5, 19, 20), PackedInt32Array(5, 3, 18), PackedInt32Array(17, 21, 19), PackedInt32Array(16, 14, 22), PackedInt32Array(22, 14, 23), PackedInt32Array(22, 23, 19), PackedInt32Array(19, 21, 22)]
cell_height = 0.01

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tfcfj"]
albedo_color = Color(0.124339, 0.292036, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_xka5w"]
size = Vector3(100, 1, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_1a8p0"]
size = Vector3(5, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_c2cig"]
size = Vector3(5, 1, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_44jow"]

[node name="Room" type="Node3D"]
script = ExtResource("1_4dbpo")

[node name="Ally" parent="." instance=ExtResource("1_dc88r")]
data = SubResource("Resource_f6l72")

[node name="Opponent" parent="." instance=ExtResource("1_dc88r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -9.46443)
data = SubResource("Resource_kyw8x")

[node name="CameraRig" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13.244, 4.945)
script = ExtResource("3_18bnm")

[node name="SpringArm3D" type="SpringArm3D" parent="CameraRig"]
transform = Transform3D(1, 0, 0, 0, 0.642788, 0.766044, 0, -0.766044, 0.642788, 0, 0, 0)
spring_length = 10.0

[node name="Camera3D" type="Camera3D" parent="CameraRig/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.984808, -0.173648, 0, 0.173648, 0.984808, -1.02946, -5.40552, 4.53577)
current = true
fov = 40.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0968534, 0.995299, 0, -0.995299, 0.0968534, 0, 51.4467, 0)

[node name="PlayerControl" type="Node3D" parent="."]
script = ExtResource("4_qh48l")

[node name="floor" type="NavigationRegion3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.381184, 0)
navigation_mesh = SubResource("NavigationMesh_ykjs7")

[node name="CSGBox3D" type="CSGBox3D" parent="floor"]
use_collision = true
size = Vector3(100, 1, 100)
material = SubResource("StandardMaterial3D_tfcfj")

[node name="StaticBody3D" type="StaticBody3D" parent="floor/CSGBox3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="floor/CSGBox3D/StaticBody3D"]
shape = SubResource("BoxShape3D_xka5w")

[node name="StaticBody3D" type="StaticBody3D" parent="floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.381184, -4.44281)

[node name="CollisionShape3D" type="CollisionShape3D" parent="floor/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.515294, 0)
shape = SubResource("BoxShape3D_1a8p0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="floor/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_c2cig")

[node name="Obstacle" parent="floor" instance=ExtResource("6_irjcc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, -1)

[node name="locationIndicator" parent="." instance=ExtResource("5_bu0hj")]
visible = false

[node name="UI" type="Control" parent="."]
light_mask = 0
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="characterInfo" type="Control" parent="UI"]
layout_mode = 1
anchor_top = 0.846
anchor_right = 0.087
anchor_bottom = 1.0
offset_top = -0.208008
offset_right = -0.224007
grow_vertical = 0
script = ExtResource("7_mcn2y")

[node name="background" type="TextureRect" parent="UI/characterInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_44jow")

[node name="energyText" type="Label" parent="UI/characterInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Energy: 3/3"
visible_characters_behavior = 1

[node name="endTurn" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="endTurnButton" type="Button" parent="UI/endTurn"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -190.0
offset_top = -102.0
offset_right = -53.0
offset_bottom = -36.0
grow_horizontal = 0
grow_vertical = 0
text = "End the turn"

[node name="targetIndicator" parent="." instance=ExtResource("8_fpsxd")]
